fixed overflow

--- a/src/app/dialog-window/dialog-window.component.css
+++ b/src/app/dialog-window/dialog-window.component.css
@@ -8,7 +8,8 @@
 .flex-wrapper {
   display: flex;
   min-width: 100%;
-  min-height: 100%;
+  max-height: 100%;
+  overflow-y: scroll;
   flex-direction: column;
   align-items: flex-end;
 }
